fixed on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -28,6 +28,7 @@ Menu
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  text-align: center;
 
   @media (width < 768px) {
     flex-direction: column;
